Use parallel marking for all non-roots and some roots